Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49929

[REG 5.5->5.6] QQuickWidget asserts "Asking for share context for widget that does not have a window handl" when starting Qt Designer form window drag

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.6.0 Beta
    • Quick: Widget
    • None
    • Ubuntu 15.04 x64; Windows 7, Mac 10.8
    • 93de0b0e3d11d761bcfd94283dc6b5e86c12d87f (qt/qtdeclarative/5.6, 15.12.2015, 5.6)

    Description

      Install the Qt 5.6.0 binaries via offline installer for linux x64 (tested with build number #291). Can be reproduced also with Windows and Mac installers; tested with MinGW #288 and Mac clang #225.
      Start QtDesigner from $QTDIR/5.6/gcc_64/bin.
      Create a new form and drag the QQuickWidget into the form.

      Bug: designer is closed immediately. Command prompt output:

      tarja@tarja-OptiPlex-9010:~/Qt5.6.0_ent_b291/5.6/gcc_64/bin$ ./designer 
      Asking for share context for widget that does not have a window handle
      Segmentation fault (core dumped)
      

      Note: Warning is present in 5.5. as well, but it did not crash.

      Attachments

        1. qtbug49929_stack.tasks
          5 kB
        2. qtbug49929_stack.txt
          26 kB
        3. qtbug49929.zip
          1 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              lagocs Laszlo Agocs
              tarjasundqvist Tarja Sundqvist
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes