Fix crash when grabbing a QQuickWidget before it is shown.

Do not access null share contexts.

Task-number: QTBUG-49929
Change-Id: I1c88563df71dd6c5d186b6f2ae147614fcc6ded9
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>